--- a/templates/header.html
+++ b/templates/header.html
@@ -1,9 +1,18 @@
 <div class="header">
-    <h2 class="left">TOP-UP ENGINE</h2>
+    <h2 class="left"><span class="topup">TOP-UP</span><span class="engine"> ENGINE</span></h2>
     <h4 class="right">
-    <span>User: name</span>&nbsp&nbsp&nbsp&nbsp<span><button>Sign Out</button></span>
+    <span class="name"></span>&nbsp&nbsp&nbsp&nbsp<span class="signout"><a href="/" onclick="signOut();">Sign out</a></span>
     </h4>
 </div>
 <div style="clear: both;"></div> 
+<!-- 
+<script>
+function signOut() {
+    var auth2 = gapi.auth2.getAuthInstance();
+    auth2.signOut().then(function () {
+      console.log('User signed out.');
+    });
+  }
+</script> -->
 
-    
+<script src="index.js"></script>
