--- a/partials/bulkrecharge.html
+++ b/partials/bulkrecharge.html
@@ -1,19 +1,38 @@
+<!--BULK RECHARGE PARTIAL PAGE-->
 <div class="main">
     <p class="page-header">Bulk Recharge</p>
     <div class="content">
-    <form method="POST">
+    
+    <!--bulk recharge request form-->
+    <form method="POST" class="bulk-recharge-form">
         <label>Upload File</label><br/>
-        <input type="file" name="file"><br/>
-        <label>Amount</label><br/>
-        <input type="number" name="amount"><br/>
-        <label>Choose Mobile Operator</label><br/>
-        <select>
-            <option value="mtn">MTN</option>
-            <option value="glo">Glo</option>
-            <option value="airtel">Airtel</option>
-            <option value="etisalat">Etisalat</option>
-        </select><br/>
-        <input class="submit" type="submit" value="Recharge">
+        <input type="file" name="bulk" required><br/>
+        <p><input class="recharge" type="submit" value="Recharge"></p>
     </form>
+
+    <!--transaction loading overlay-->
+    <div class="overlay" id="loader">
+        <div class="spinner"></div> 
+    </div>
+
+    <!--transaction successful overlay-->
+    <div class="overlay" id="success">
+        <h1>Successful</h1><br/>
+        <img src="../images/success.png"/><br/><br/>
+        <p><span>Response Code:</span></p>
+        <p><span>Approved Amount:</span></p>
+        <p><span>Transaction Ref:</span></p>
+        <p><span>Balance:</span></p><br/>
+        <p id="ok_button">OK</p>
+    </div>
+
+    <!--transaction error overlay-->
+    <div class="overlay" id="error">
+        <br/><br/>
+        <h1>Transaction Failed</h1>
+        <p id="retry_btn">RETRY</p>
+    </div>
 </div>
 </div>
+
+<script src="../js/script.js"></script>
