--- a/templates/nav.html
+++ b/templates/nav.html
@@ -2,7 +2,7 @@
     <ul>
         <li><a href="#/history"><i class="fa fa-fw fa-history"></i> &nbspHistory</a>
         </li>
-        <li><a id="single" href="#/singlerecharge"><i class="fa fa-fw fa-dashboard"></i> &nbspSingle Recharge</a>
+        <li><a id="single" class="active" href="#/singlerecharge"><i class="fa fa-fw fa-dashboard"></i> &nbspSingle Recharge</a>
         </li>
         <li><a id="bulk" href="#/bulkrecharge"><i class="fa fa-fw fa-send"></i> &nbspBulk Recharge</a>
         </li>
