--- a/css/main.sass
+++ b/css/main.sass
@@ -11,6 +11,8 @@ body, ul
     padding: 0
 a
     text-decoration: none
+
+/*header styles*/
 .header
     background: #0c1218
     color: white
@@ -34,18 +36,12 @@ a
             color: #00ff39
         a:hover
             color: white 
-.recharge
-    color: white
-    background: #0c1218
-    height: 36px
-    border-radius: 10px
-.recharge:hover
-    cursor: pointer
-    color: #00ff39
-.signout
-    width: 50px
-    height: 30px
-div.nav
+    .signout
+        width: 50px
+        height: 30px
+
+/*navbar styles*/
+div.navbar
     margin-top: 58.5px
     height: 100%
     width: 230px
@@ -54,7 +50,6 @@ div.nav
     left: 0
     background: #031120
     overflow-x: hidden
-
 ul
     padding-top: 35px
     list-style: none
@@ -70,6 +65,13 @@ ul
         a:focus
             color : #1ab394  
             border: none
+/*main page styles*/
+#history-page
+    display: none
+#single-recharge-page
+    display: block
+#bulk-recharge-page
+    display: none
 .main 
     width: 400px
     position: absolute
@@ -80,7 +82,6 @@ ul
     .content
         margin-top: 2rem
         margin-left: 5.5rem
-
 .page-header
     font-size: 33px
     font-family: 'Josefin Sans', 'sans serif'
@@ -89,9 +90,11 @@ ul
     margin-left: 43px
     color: #0c1218
 
+/*form styles*/
+form
+    line-height: 2.2
 label
     font-family: sans-serif
-
 input
     width: 257px
 
@@ -105,9 +108,16 @@ input:not(.recharge), select
     padding-left: 10px
 input:not(.recharge):focus, select:focus
     border: 1px solid #00ff39
+.recharge
+    color: white
+    background: #0c1218
+    height: 36px
+    border-radius: 10px
+.recharge:hover
+    cursor: pointer
+    color: #00ff39
 
-form
-    line-height: 2.2
+/*overlay styles*/
 .overlay:before 
     content: ""
     display: block
@@ -122,15 +132,17 @@ form
     h1
         font-family: 'Josefin Sans', 'sans serif'
     position: absolute
-    top: 8px
-    left: 190px
-    width: 119%
-    height: 547px
+    top: 77px
+    -moz-webkit-top: 73px
+    left: 422px
+    width: 34%
+    height: 511px
+    -moz-webkit-height: 543px
     z-index: 10
     display: none
     background-color: #061635
     text-align: center
-    border-radius: 16px
+    border-radius: 24px
     color: white
 .overlay:not(h1)
     font-family: sans-serif
@@ -156,24 +168,24 @@ form
     to
         transform: rotate(360deg)
 #foot_buttons
-    margin-top: 69px
+    margin-top: 62.8px
 #request
     margin-top: 18px
-#confirm .span
+#confirm-overlay .span
     background: #39a815
     padding: 14px 0px
     cursor: pointer
 #continue, #edit
     display: inline-block
-    width: 49.7%
+    width: 49.77%
     cursor: pointer
     color: #031120
 #continue
     border-right: 1px solid white
-    border-bottom-left-radius: 16px
+    border-bottom-left-radius: 24px
 #edit   
     border-left: 1px solid white
-    border-bottom-right-radius: 16px
+    border-bottom-right-radius: 24px
 #success
     h1
         font-size: 32px
@@ -193,6 +205,28 @@ img
     display: inline-block
 #ok_btn:hover, #continue:hover, #edit:hover, #retry_btn:hover
     color: white 
+
+/*history-page-design*/
+#single-r-history-btn, #bulk-r-history-btn
+    border: 0
+    padding: 0
+    background: 0
+    margin: 16px
+    margin-left: 0
+    font-size: 17px
+#bulk-recharge-history
+    display: none
+table
+    width: 800px
+    border-collapse: collapse
+#single-recharge-history, #bulk-recharge-history
+    h2    
+        width: 500px
+td
+    border-bottom: 1px solid gray
+    padding: 11px
+
+/*responsiveness*/
 @media (max-width: 768px) 
     div.nav
         width: 200px
