--- a/css/main.sass
+++ b/css/main.sass
@@ -267,6 +267,8 @@ td.operator
         .content    
             margin-top: 2rem
             margin-left: 2.5rem
+    table
+        width: 500px
 @media(max-width: 595px)
     div.nav
         padding: 0px
