--- a/css/main.sass
+++ b/css/main.sass
@@ -51,11 +51,10 @@ div.navbar
     margin-top: 58.5px
     height: 100%
     width: 230px
-    z-index: 1000
     position: fixed
     top: 0
     left: 0
-    background: #031120
+    background: #0c1320
     transition: all 0.3s
 div.navbar.active
     margin-left: -230px
@@ -200,6 +199,8 @@ input:not(.recharge):focus, select:focus
         font-size: 32px
 img
     width: 119px
+p#retry_btn
+    margin-top: 102px
 #ok_btn, #retry_btn
     border: 1px solid #54c50d
     background: #54c50d
